--- a/Capstone Data Wrangling.ipynb
+++ b/Capstone Data Wrangling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "4               3.60                               4                87  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "4                Fab, private seattle urban cottage!      USD   nightly  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +635,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +862,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1012,64 +1012,456 @@
        "4      241032 2016-01-08         f     NaN  January"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_calendar[\"month\"] = df_calendar[\"date\"].dt.strftime(\"%B\")\n",
-    "df_calendar.head()"
+    "df_calendar.head()\n",
+    "#pleat column - str split \n",
+    "#dataframe.Series.str.split(\"<td>\", expand)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>room_id</th>\n",
+       "      <th>host_id</th>\n",
+       "      <th>room_type</th>\n",
+       "      <th>address</th>\n",
+       "      <th>reviews</th>\n",
+       "      <th>overall_satisfaction</th>\n",
+       "      <th>accommodates</th>\n",
+       "      <th>bedrooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>price</th>\n",
+       "      <th>...</th>\n",
+       "      <th>name</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>rate_type</th>\n",
+       "      <th>id</th>\n",
+       "      <th>host_name</th>\n",
+       "      <th>neighbourhood_group</th>\n",
+       "      <th>neighbourhood</th>\n",
+       "      <th>minimum_nights</th>\n",
+       "      <th>last_review</th>\n",
+       "      <th>availability_365</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>5340</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5341</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5342</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5343</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5344</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      room_id  host_id  room_type  address  reviews  overall_satisfaction  \\\n",
+       "5340    False    False      False    False    False                  True   \n",
+       "5341    False    False      False    False    False                  True   \n",
+       "5342    False    False      False    False    False                  True   \n",
+       "5343    False    False      False    False    False                  True   \n",
+       "5344    False    False      False    False    False                  True   \n",
+       "\n",
+       "      accommodates  bedrooms  bathrooms  price  ...   name  currency  \\\n",
+       "5340         False     False      False  False  ...  False     False   \n",
+       "5341         False     False      False  False  ...  False     False   \n",
+       "5342         False     False      False  False  ...  False     False   \n",
+       "5343         False     False      False  False  ...  False     False   \n",
+       "5344         False     False      False  False  ...  False     False   \n",
+       "\n",
+       "      rate_type     id  host_name  neighbourhood_group  neighbourhood  \\\n",
+       "5340      False  False      False                False          False   \n",
+       "5341      False  False      False                False          False   \n",
+       "5342      False  False      False                False          False   \n",
+       "5343      False  False      False                False          False   \n",
+       "5344      False  False      False                False          False   \n",
+       "\n",
+       "      minimum_nights  last_review  availability_365  \n",
+       "5340           False        False             False  \n",
+       "5341           False        False             False  \n",
+       "5342           False        False             False  \n",
+       "5343           False        False             False  \n",
+       "5344           False         True             False  \n",
+       "\n",
+       "[5 rows x 24 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seattle_df_dropped.isnull().tail()\n",
+    "##count how many nulls there are in total values\n",
+    "#for calendar if its NaN in the price just put 0\n",
+    "#overall_satisfaction if NaN also put 0 because it only should allow 1-5, fill the NaNs with the median or mean. (.fillna())"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "room_id                   0\n",
+       "host_id                   0\n",
+       "room_type                 0\n",
+       "address                   0\n",
+       "reviews                   0\n",
+       "overall_satisfaction    781\n",
+       "accommodates              0\n",
+       "bedrooms                  0\n",
+       "bathrooms                 1\n",
+       "price                     0\n",
+       "last_modified             0\n",
+       "latitude                  0\n",
+       "longitude                 0\n",
+       "location                  0\n",
+       "name                      0\n",
+       "currency                  0\n",
+       "rate_type                 0\n",
+       "id                        0\n",
+       "host_name                 7\n",
+       "neighbourhood_group       0\n",
+       "neighbourhood             0\n",
+       "minimum_nights            0\n",
+       "last_review             222\n",
+       "availability_365          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seattle_df_dropped.isnull().sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    5.0\n",
+       "1    5.0\n",
+       "2    4.5\n",
+       "3    4.5\n",
+       "4    5.0\n",
+       "Name: overall_satisfaction, dtype: float64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seattle_df_dropped[\"overall_satisfaction\"].fillna(0).head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Megan\n",
+       "1        Maddy\n",
+       "2        Joyce\n",
+       "3    Angielena\n",
+       "4        Siena\n",
+       "Name: host_name, dtype: object"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seattle_df_dropped[\"host_name\"].fillna(\"Unknown\").head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seattle_df_dropped[\"host_name\"].isnull().sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    2019-06-18\n",
+       "1    2018-11-24\n",
+       "2    2019-06-23\n",
+       "3    2019-06-23\n",
+       "4    2019-07-07\n",
+       "Name: last_review, dtype: object"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seattle_df_dropped[\"last_review\"].fillna(\"0000-00-00\").head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2.5\n",
+       "1       1.0\n",
+       "2       1.0\n",
+       "3       3.0\n",
+       "4       1.0\n",
+       "5       1.0\n",
+       "6       1.0\n",
+       "7       1.0\n",
+       "8       1.0\n",
+       "9       1.5\n",
+       "10      2.0\n",
+       "11      1.5\n",
+       "12      1.5\n",
+       "13      1.0\n",
+       "14      1.0\n",
+       "15      1.0\n",
+       "16      1.0\n",
+       "17      1.0\n",
+       "18      1.0\n",
+       "19      1.0\n",
+       "20      1.0\n",
+       "21      1.0\n",
+       "22      1.0\n",
+       "23      1.0\n",
+       "24      2.5\n",
+       "25      1.0\n",
+       "26      1.0\n",
+       "27      1.0\n",
+       "28      1.0\n",
+       "29      1.0\n",
+       "       ... \n",
+       "5315    3.5\n",
+       "5316    2.0\n",
+       "5317    1.0\n",
+       "5318    1.0\n",
+       "5319    1.0\n",
+       "5320    2.0\n",
+       "5321    1.0\n",
+       "5322    1.0\n",
+       "5323    1.0\n",
+       "5324    1.0\n",
+       "5325    1.0\n",
+       "5326    1.0\n",
+       "5327    1.0\n",
+       "5328    2.5\n",
+       "5329    2.5\n",
+       "5330    2.0\n",
+       "5331    1.0\n",
+       "5332    1.5\n",
+       "5333    1.0\n",
+       "5334    3.5\n",
+       "5335    1.0\n",
+       "5336    2.0\n",
+       "5337    1.0\n",
+       "5338    2.0\n",
+       "5339    1.0\n",
+       "5340    1.5\n",
+       "5341    1.0\n",
+       "5342    1.0\n",
+       "5343    2.0\n",
+       "5344    1.0\n",
+       "Name: bathrooms, Length: 5345, dtype: float64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "seattle_df_dropped[\"bathrooms\"].fillna(0)"
+   ]
   },
   {
    "cell_type": "code",
