--- a/Capstone Data Wrangling.ipynb
+++ b/Capstone Data Wrangling.ipynb
@@ -1245,46 +1245,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "room_id                   0\n",
-       "host_id                   0\n",
-       "room_type                 0\n",
-       "address                   0\n",
-       "reviews                   0\n",
-       "overall_satisfaction    781\n",
-       "accommodates              0\n",
-       "bedrooms                  0\n",
-       "bathrooms                 1\n",
-       "price                     0\n",
-       "last_modified             0\n",
-       "latitude                  0\n",
-       "longitude                 0\n",
-       "location                  0\n",
-       "name                      0\n",
-       "currency                  0\n",
-       "rate_type                 0\n",
-       "id                        0\n",
-       "host_name                 7\n",
-       "neighbourhood_group       0\n",
-       "neighbourhood             0\n",
-       "minimum_nights            0\n",
-       "last_review             222\n",
-       "availability_365          0\n",
+       "room_id      0\n",
+       "host_id      0\n",
+       "room_type    0\n",
+       "address      0\n",
+       "reviews      0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "seattle_df_dropped.isnull().sum()"
+    "seattle_df_dropped.isnull().sum().head()"
    ]
   },
   {
@@ -1384,98 +1365,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0       2.5\n",
-       "1       1.0\n",
-       "2       1.0\n",
-       "3       3.0\n",
-       "4       1.0\n",
-       "5       1.0\n",
-       "6       1.0\n",
-       "7       1.0\n",
-       "8       1.0\n",
-       "9       1.5\n",
-       "10      2.0\n",
-       "11      1.5\n",
-       "12      1.5\n",
-       "13      1.0\n",
-       "14      1.0\n",
-       "15      1.0\n",
-       "16      1.0\n",
-       "17      1.0\n",
-       "18      1.0\n",
-       "19      1.0\n",
-       "20      1.0\n",
-       "21      1.0\n",
-       "22      1.0\n",
-       "23      1.0\n",
-       "24      2.5\n",
-       "25      1.0\n",
-       "26      1.0\n",
-       "27      1.0\n",
-       "28      1.0\n",
-       "29      1.0\n",
-       "       ... \n",
-       "5315    3.5\n",
-       "5316    2.0\n",
-       "5317    1.0\n",
-       "5318    1.0\n",
-       "5319    1.0\n",
-       "5320    2.0\n",
-       "5321    1.0\n",
-       "5322    1.0\n",
-       "5323    1.0\n",
-       "5324    1.0\n",
-       "5325    1.0\n",
-       "5326    1.0\n",
-       "5327    1.0\n",
-       "5328    2.5\n",
-       "5329    2.5\n",
-       "5330    2.0\n",
-       "5331    1.0\n",
-       "5332    1.5\n",
-       "5333    1.0\n",
-       "5334    3.5\n",
-       "5335    1.0\n",
-       "5336    2.0\n",
-       "5337    1.0\n",
-       "5338    2.0\n",
-       "5339    1.0\n",
-       "5340    1.5\n",
-       "5341    1.0\n",
-       "5342    1.0\n",
-       "5343    2.0\n",
-       "5344    1.0\n",
-       "Name: bathrooms, Length: 5345, dtype: float64"
+       "0    2.5\n",
+       "1    1.0\n",
+       "2    1.0\n",
+       "3    3.0\n",
+       "4    1.0\n",
+       "Name: bathrooms, dtype: float64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "seattle_df_dropped[\"bathrooms\"].fillna(0)"
+    "seattle_df_dropped[\"bathrooms\"].fillna(0).head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>listing_id</th>\n",
+       "      <th>date</th>\n",
+       "      <th>available</th>\n",
+       "      <th>price</th>\n",
+       "      <th>month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   listing_id   date  available  price  month\n",
+       "0       False  False      False  False  False\n",
+       "1       False  False      False  False  False\n",
+       "2       False  False      False   True  False\n",
+       "3       False  False      False   True  False\n",
+       "4       False  False      False   True  False"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_calendar.isnull().head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    $85.00\n",
+       "1    $85.00\n",
+       "2         0\n",
+       "3         0\n",
+       "4         0\n",
+       "Name: price, dtype: object"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_calendar[\"price\"].fillna(\"0\").head()"
+   ]
   },
   {
    "cell_type": "code",
