--- a/inferential_statistics_1b-Q6.25.ipynb
+++ b/inferential_statistics_1b-Q6.25.ipynb
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -297,33 +297,35 @@
        "13270.422265141257"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.mean(medical.charges)"
+    "sample_mean = np.mean(medical.charges)\n",
+    "sample_mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12105.484975561605"
+       "12110.011236693994"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.std(medical.charges)"
+    "sample_std = np.std(medical.charges, ddof = 1)\n",
+    "sample_std"
    ]
   },
   {
@@ -337,7 +339,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:__ t-statistic"
    ]
   },
   {
@@ -356,42 +358,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.6448536269514722\n",
-      "0.95\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from scipy.stats import norm\n",
-    "\n",
-    "# define probability\n",
-    "value = norm.ppf(0.95)\n",
-    "print(value)\n",
-    "# confirm with cdf\n",
-    "p = norm.cdf(value)\n",
-    "print(p)"
+    "from scipy.stats import t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1338"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = len(medical.charges)\n",
+    "n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.6459941145571324"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_crit = t.ppf(.05, df = n -1) #of lower bound of 95# conf interval\n",
+    "t_crit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12725.48718381623"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lower_limit = sample_mean+ t_crit * sample_std/ np.sqrt ( n )\n",
+    "lower_limit"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -445,24 +480,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "x0 = medical.charges[medical.insuranceclaim == 0]\n",
+    "x1 = medical.charges[medical.insuranceclaim == 1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8821.421892306294, 6440.699841605233)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x0_mean = np.mean(x0)\n",
+    "x0_std = np.std(x0)\n",
+    "x0_n = len(x0)\n",
+    "x0_mean, x0_std"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16423.928276537663, 14036.956250260411)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x1_mean = np.mean(x1)\n",
+    "x1_std = np.std(x1)\n",
+    "x1_n = len(x1)\n",
+    "x1_mean, x1_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "151975.98310128401"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pooled_std = np.sqrt((x0_n-1)*(x0_std ** 2) + (x1_n-1)*(x1_std**2)/(x0_n + x1_n - 2))\n",
+    "pooled_std"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'numpy.float64' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-54-f6ccf5a81f74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx0_mean\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mx1_mean\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mpooled_std\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mx0_n\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mx1_n\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mt_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#can't plug in pooled_std??\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float64' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "t_test = (x0_mean - x1_mean) / pooled_std(np.sqrt((1/x0_n)+ (1/x1_n)))\n",
+    "t_test\n",
+    "#can't plug in pooled_std??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-11.893299030876712, pvalue=4.461230231620717e-31)"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ttest_ind(x0,x1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -487,10 +621,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-13.298031957975649, pvalue=1.1105103216309125e-37)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ttest_ind(x0, x1, equal_var=False) # for samples of unequal variance"
+   ]
   },
   {
    "cell_type": "markdown",
