--- a/Capstone Data Visualization.ipynb
+++ b/Capstone Data Visualization.ipynb
@@ -120,9 +120,7 @@
     "plt.figure(figsize=(25, 10)) \n",
     "plt.bar(x,y)\n",
     "plt.ylabel(\"Number of Bookings\")\n",
-    "plt.title(\"10 Most Popular Neighborhoods by Bookings\")\n",
-    "\n",
-    "#how to just take the first couple?"
+    "plt.title(\"10 Most Popular Neighborhoods by Bookings\")\n"
    ]
   },
   {
@@ -887,7 +885,11 @@
     "                 xytext=(0,2), # distance from text to points (x,y)\n",
     "                 ha='left') # horizontal alignment can be left, right or center\n",
     "    \n",
-    "#not useful to do a bar graph like this, maybe a line graph or"
+    "#not useful to do a bar graph like this, maybe a line graph or\n",
+    "\n",
+    "\n",
+    "#maybe not the lines, or a horizontal bar plot, or just don't connect the dots\n",
+    "#use maybe median instead of mean - try a different one maybe? maybe also try the median of all the neighborhoods instead of the little ones\n"
    ]
   },
   {
@@ -896,7 +898,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#thinking could make a plot with points of varyiong size to show and how many ratings they got too?"
+    "#thinking could make a plot with points of varying size to show and how many ratings they got too?\n",
+    "#could try bubble plot with month - satisfaction score & month or year\n",
+    "#could use color as another axis (satisfaction score) - blue to red? \n"
    ]
   },
   {
