--- a/Inferential Statistics 8a.ipynb
+++ b/Inferential Statistics 8a.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "array([-0.84800948,  1.30590636,  0.92420797,  0.6404118 , -1.05473698])"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "0.19355593334131074"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "0.9606195639478641"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +367,7 @@
        "1.1534874332992306"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,22 +399,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9606195639478641"
+       "1.0740053227518152"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.std(samp)"
+    "np.std(samp, ddof = 1)"
    ]
   },
   {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -560,7 +560,7 @@
        "0.9606195639478641"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +771,7 @@
        "173.47911444163503"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +807,7 @@
        "173.7317666636263"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
        " <a list of 50 Patch objects>)"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -933,7 +933,7 @@
        "171.99720413724776"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -944,22 +944,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.6097626127873992"
+       "1.6119723085603175"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.std(daily_means)"
+    "np.std(daily_means, ddof = 1)"
    ]
   },
   {
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1012,7 +1012,7 @@
        " <a list of 30 Patch objects>)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -1052,7 +1052,7 @@
        "0.7328993810639504"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1135,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1144,7 @@
        "0.8413447460685429"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -1178,7 +1178,7 @@
        "0.8413447460685429"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
        "1.0717590259723409e-08"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1259,7 +1259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -1280,7 +1280,7 @@
        "       171.18783138, 171.14370134])"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1294,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -1303,18 +1303,19 @@
        "172.7815108576788"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.mean(sample_50)"
+    "samp50mean = np.mean(sample_50)\n",
+    "samp50mean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1326,7 @@
        "       1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1345,7 +1346,7 @@
        "4.195424364433547"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1357,16 +1358,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7585327250895854"
+       "1.6448536269514722"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z = norm.ppf(0.95)\n",
+    "z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "67.7405359070941"
+      ]
+     },
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1378,28 +1400,10 @@
     "#Calculate the (95%) margin of error (use the exact critial z value to 2 decimal places - look this up or use norm.ppf())\n",
     "#z = 1-(1 - 0.95/2) - 0.475 --> 0.1808\n",
     "\n",
-    "margin = 0.1808 * standardev\n",
+    "#error = z * mean / sqrt(n)\n",
+    "\n",
+    "margin = (z * samp50mean) / standardev\n",
     "margin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 148,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(170.82867278176107, 173.17132721823893)"
-      ]
-     },
-     "execution_count": 148,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "norm.interval(margin, loc = 172)"
    ]
   },
   {
@@ -1413,7 +1417,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__A:__"
+    "__A:__ *what is this asking?*"
    ]
   },
   {
@@ -1432,49 +1436,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#t.interval(0.975, sample_50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array([-2.26040858, -2.26160372, -2.26012706, -2.26067829, -2.26192578,\n",
-       "        -2.2613513 , -2.26037363, -2.26186589, -2.26061393, -2.2614992 ,\n",
-       "        -2.2614333 , -2.26083416, -2.26062148, -2.26078781, -2.26090339,\n",
-       "        -2.26113863, -2.2615945 , -2.26088203, -2.26132387, -2.26049185,\n",
-       "        -2.26124897, -2.26102277, -2.26118541, -2.26115972, -2.26124276,\n",
-       "        -2.26144743, -2.26044916, -2.26093266, -2.26093119, -2.26174017,\n",
-       "        -2.26159919, -2.2614833 , -2.26171992, -2.26064518, -2.2621353 ,\n",
-       "        -2.26058791, -2.2611965 , -2.26204859, -2.26053166, -2.26082116,\n",
-       "        -2.2606696 , -2.26146705, -2.26080524, -2.261201  , -2.26033939,\n",
-       "        -2.26143652, -2.26150864, -2.26117442, -2.26128883, -2.261294  ]),\n",
-       " array([2.26040858, 2.26160372, 2.26012706, 2.26067829, 2.26192578,\n",
-       "        2.2613513 , 2.26037363, 2.26186589, 2.26061393, 2.2614992 ,\n",
-       "        2.2614333 , 2.26083416, 2.26062148, 2.26078781, 2.26090339,\n",
-       "        2.26113863, 2.2615945 , 2.26088203, 2.26132387, 2.26049185,\n",
-       "        2.26124897, 2.26102277, 2.26118541, 2.26115972, 2.26124276,\n",
-       "        2.26144743, 2.26044916, 2.26093266, 2.26093119, 2.26174017,\n",
-       "        2.26159919, 2.2614833 , 2.26171992, 2.26064518, 2.2621353 ,\n",
-       "        2.26058791, 2.2611965 , 2.26204859, 2.26053166, 2.26082116,\n",
-       "        2.2606696 , 2.26146705, 2.26080524, 2.261201  , 2.26033939,\n",
-       "        2.26143652, 2.26150864, 2.26117442, 2.26128883, 2.261294  ]))"
+       "12.706204736432095"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t.interval(0.975, sample_50)"
+    "t.ppf(0.975, df = 1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
