--- a/inferential_statistics_1b-Q6.25.ipynb
+++ b/inferential_statistics_1b-Q6.25.ipynb
@@ -403,7 +403,7 @@
     }
    ],
    "source": [
-    "t_crit = t.ppf(.05, df = n -1) #of lower bound of 95# conf interval\n",
+    "t_crit = t.ppf(.05, df = n -1) #of lower bound of 95% conf interval\n",
     "t_crit"
    ]
   },
@@ -536,51 +536,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "151975.98310128401"
+       "11512.282899205744"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pooled_std = np.sqrt((x0_n-1)*(x0_std ** 2) + (x1_n-1)*(x1_std**2)/(x0_n + x1_n - 2))\n",
+    "pooled_std = np.sqrt(((x0_n-1)*(x0_std ** 2) + (x1_n-1)*(x1_std**2))/(x0_n + x1_n - 2))\n",
     "pooled_std"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'numpy.float64' object is not callable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-54-f6ccf5a81f74>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt_test\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mx0_mean\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mx1_mean\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mpooled_std\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mx0_n\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mx1_n\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mt_test\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;31m#can't plug in pooled_std??\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'numpy.float64' object is not callable"
-     ]
+     "data": {
+      "text/plain": [
+       "-11.901306943555385"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "t_test = (x0_mean - x1_mean) / pooled_std(np.sqrt((1/x0_n)+ (1/x1_n)))\n",
-    "t_test\n",
-    "#can't plug in pooled_std??"
+    "t_test = (x0_mean - x1_mean) / (pooled_std*(np.sqrt((1/x0_n)+ (1/x1_n))))\n",
+    "t_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import ttest_ind"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +596,7 @@
        "Ttest_indResult(statistic=-11.893299030876712, pvalue=4.461230231620717e-31)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,6 +604,77 @@
    "source": [
     "ttest_ind(x0,x1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#calculate p-value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1336"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ddof = (len(x0)-1) + (len(x1)-1)\n",
+    "ddof"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.97831334e-10,            nan, 1.90223261e-12, ...,\n",
+       "        1.27572576e-03, 1.57199487e-32, 5.33662303e-02],\n",
+       "       [5.76343308e-10, 5.33662303e-02, 1.24849263e-13, ...,\n",
+       "        6.98619890e-03, 1.90842497e-31, 5.33662303e-02],\n",
+       "       [1.80972619e-12, 5.33662303e-02, 1.74617597e-13, ...,\n",
+       "        6.98619890e-03, 3.56893337e-32,            nan],\n",
+       "       ...,\n",
+       "       [5.76343308e-10,            nan, 3.45700818e-14, ...,\n",
+       "        6.98619890e-03, 2.22919973e-31, 5.33662303e-02],\n",
+       "       [8.47826744e-11,            nan, 5.59150597e-12, ...,\n",
+       "        1.27572576e-03, 1.31053948e-31,            nan],\n",
+       "       [1.51256041e-17,            nan, 1.07014380e-12, ...,\n",
+       "        5.33662303e-02, 1.38647137e-32, 5.33662303e-02]])"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_val = 2 * t.cdf(t_test, medical)\n",
+    "p_val\n",
+    "#why is it giving me an array?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -621,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -630,7 +708,7 @@
        "Ttest_indResult(statistic=-13.298031957975649, pvalue=1.1105103216309125e-37)"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
